--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
    <head>
       <title>HTML Meta Tag</title>
-      <meta http-equiv = "refresh" content = "3; url = https://www.chiefdelphi.com/uploads/default/original/3X/8/5/85b48f49c32c00ce14b891849387368d05f77617.jpeg" />
+      <meta http-equiv = "refresh" content = "0; url = https://www.youtube.com/watch?v=wdvJ7hEzhRs&ab_channel=BeltsAndBoxes" />
    </head>
    <body>
       <p>Redirecting to another URL</p>
